vlib/v/checker/tests/none_type_cast_err.out
vlib/v/checker/tests/none_type_cast_err.vv:2:7: error: cannot cast `none` to `string`
    1 | fn main() {
    2 |     _ := string(none)
      |          ~~~~~~~~~~~~
    3 |     _ := int(none)
    4 |     _ := i8(none)
vlib/v/checker/tests/none_type_cast_err.vv:3:7: error: cannot cast `none` to `int`
    1 | fn main() {
    2 |     _ := string(none)
    3 |     _ := int(none)
      |          ~~~~~~~~~
    4 |     _ := i8(none)
    5 |     _ := i16(none)
vlib/v/checker/tests/none_type_cast_err.vv:4:7: error: cannot cast `none` to `i8`
    2 |     _ := string(none)
    3 |     _ := int(none)
    4 |     _ := i8(none)
      |          ~~~~~~~~
    5 |     _ := i16(none)
    6 |     _ := i64(none)
vlib/v/checker/tests/none_type_cast_err.vv:5:7: error: cannot cast `none` to `i16`
    3 |     _ := int(none)
    4 |     _ := i8(none)
    5 |     _ := i16(none)
      |          ~~~~~~~~~
    6 |     _ := i64(none)
    7 |     _ := u16(none)
vlib/v/checker/tests/none_type_cast_err.vv:6:7: error: cannot cast `none` to `i64`
    4 |     _ := i8(none)
    5 |     _ := i16(none)
    6 |     _ := i64(none)
      |          ~~~~~~~~~
    7 |     _ := u16(none)
    8 |     _ := u32(none)
vlib/v/checker/tests/none_type_cast_err.vv:7:7: error: cannot cast `none` to `u16`
    5 |     _ := i16(none)
    6 |     _ := i64(none)
    7 |     _ := u16(none)
      |          ~~~~~~~~~
    8 |     _ := u32(none)
    9 |     _ := u64(none)
vlib/v/checker/tests/none_type_cast_err.vv:8:7: error: cannot cast `none` to `u32`
    6 |     _ := i64(none)
    7 |     _ := u16(none)
    8 |     _ := u32(none)
      |          ~~~~~~~~~
    9 |     _ := u64(none)
   10 |     _ := rune(none)
vlib/v/checker/tests/none_type_cast_err.vv:9:7: error: cannot cast `none` to `u64`
    7 |     _ := u16(none)
    8 |     _ := u32(none)
    9 |     _ := u64(none)
      |          ~~~~~~~~~
   10 |     _ := rune(none)
   11 |     _ := f32(none)
vlib/v/checker/tests/none_type_cast_err.vv:10:7: error: cannot cast `none` to `rune`
    8 |     _ := u32(none)
    9 |     _ := u64(none)
   10 |     _ := rune(none)
      |          ~~~~~~~~~~
   11 |     _ := f32(none)
   12 |     _ := f64(none)
vlib/v/checker/tests/none_type_cast_err.vv:11:7: error: cannot cast `none` to `f32`
    9 |     _ := u64(none)
   10 |     _ := rune(none)
   11 |     _ := f32(none)
      |          ~~~~~~~~~
   12 |     _ := f64(none)
   13 | }
vlib/v/checker/tests/none_type_cast_err.vv:12:7: error: cannot cast `none` to `f64`
   10 |     _ := rune(none)
   11 |     _ := f32(none)
   12 |     _ := f64(none)
      |          ~~~~~~~~~
   13 | }