vlib/v/checker/tests/none_type_cast_err.vv
fn main() {
	_ := string(none)
	_ := int(none)
	_ := i8(none)
	_ := i16(none)
	_ := i64(none)
	_ := u16(none)
	_ := u32(none)
	_ := u64(none)
	_ := rune(none)
	_ := f32(none)
	_ := f64(none)
}
